[gd_scene load_steps=14 format=2]

[ext_resource path="res://ShopScene.gd" type="Script" id=1]
[ext_resource path="res://ShopModel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Shop/speech-alert.png" type="Texture" id=3]
[ext_resource path="res://Art/Icons/IconBackground.png" type="Texture" id=4]
[ext_resource path="res://UpgradeGrid.tscn" type="PackedScene" id=5]
[ext_resource path="res://SuppliesGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://UpgradesSection.gd" type="Script" id=7]
[ext_resource path="res://Art/Icons/compass_ui.svg" type="Texture" id=8]
[ext_resource path="res://ShopKeeperSection.gd" type="Script" id=9]
[ext_resource path="res://SuppliesSection.gd" type="Script" id=10]
[ext_resource path="res://MoneyIcon.tscn" type="PackedScene" id=11]
[ext_resource path="res://Font/Font.tres" type="Theme" id=12]
[ext_resource path="res://Art/Shop/OldManIdle.tscn" type="PackedScene" id=13]

[node name="ShopScene" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraNavigation" type="Camera" parent="."]
transform = Transform( 0.498276, 0.187524, -0.846496, 0, 0.97633, 0.216286, 0.867019, -0.10777, 0.486482, -26.4532, -544.646, -6.81108 )
fov = 60.2
far = 8192.0

[node name="CameraUpgrades" type="Camera" parent="."]
transform = Transform( 0.43207, 0.369857, -0.822509, 0, 0.912034, 0.410114, 0.90184, -0.177198, 0.394063, -2.42049, -549.77, -47.0659 )
fov = 60.2
far = 8192.0

[node name="CameraShopkeeper" type="Camera" parent="."]
transform = Transform( 0.417122, 0.130303, -0.899461, 0, 0.989669, 0.143372, 0.908851, -0.0598034, 0.412812, 19.8697, -554.179, -36.4769 )
fov = 60.2
far = 8192.0

[node name="CameraSupplies" type="Camera" parent="."]
transform = Transform( 0.244901, 0.231615, -0.941477, 0, 0.971047, 0.238889, 0.969548, -0.0585043, 0.237811, 9.3137, -554.179, -15.6513 )
fov = 60.2
far = 8192.0

[node name="ShopModel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -576.155, -5.86547 )

[node name="Old Man Idle" parent="." instance=ExtResource( 13 )]
transform = Transform( 37.6222, 0, -103.366, 0, 110, 0, 103.366, 0, 37.6222, 36.317, -573.724, -43.327 )

[node name="2D" type="CanvasLayer" parent="."]

[node name="NavigationIcon" type="Sprite" parent="2D"]
position = Vector2( 225, 104 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="SpeechAlert" type="Sprite" parent="2D"]
position = Vector2( 180, 87 )
texture = ExtResource( 3 )

[node name="ShopKeeperSection" type="Control" parent="2D"]
visible = false
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 9 )

[node name="CursorPos" type="Position2D" parent="2D/ShopKeeperSection"]
position = Vector2( 157, 80 )

[node name="Speech" type="Label" parent="2D/ShopKeeperSection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -113.0
margin_right = 140.0
margin_bottom = -3.0
theme = ExtResource( 12 )
text = "This is a whole bunch of text. I'm just gonna keep on blathering away just to see what my words look like. This is actually way more than I ever want to say most likely and it still looks fine. Good....."
align = 1
autowrap = true

[node name="UpgradesSection" type="Control" parent="2D"]
visible = false
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 7 )

[node name="CursorPos" type="Position2D" parent="2D/UpgradesSection"]
position = Vector2( 85, 93 )

[node name="Background" type="NinePatchRect" parent="2D/UpgradesSection"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -100.0
margin_right = 135.0
margin_bottom = 100.0
rect_min_size = Vector2( 270, 200 )
texture = ExtResource( 4 )
patch_margin_left = 120
patch_margin_top = 80
patch_margin_right = 120
patch_margin_bottom = 80

[node name="ItemName" type="Label" parent="2D/UpgradesSection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -81.0
margin_right = 160.0
margin_bottom = -66.0
theme = ExtResource( 12 )
text = "Name of thing"
align = 1
uppercase = true

[node name="Description" type="Label" parent="2D/UpgradesSection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -63.0
margin_right = 140.0
margin_bottom = -30.0
theme = ExtResource( 12 )
text = "This is the description of the thing"
align = 1
autowrap = true

[node name="UpgradeGrid" parent="2D/UpgradesSection" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -73.0
margin_right = 49.5
margin_bottom = 27.0

[node name="SuppliesSection" type="Control" parent="2D"]
visible = false
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 10 )

[node name="CursorPos" type="Position2D" parent="2D/SuppliesSection"]
position = Vector2( 225, 104 )

[node name="SuppliesGrid" parent="2D/SuppliesSection" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -73.0
margin_right = 66.0
margin_bottom = 27.0

[node name="ItemName" type="Label" parent="2D/SuppliesSection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -81.0
margin_right = 160.0
margin_bottom = -66.0
theme = ExtResource( 12 )
text = "Name of thing"
align = 1
uppercase = true

[node name="Description" type="Label" parent="2D/SuppliesSection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -63.0
margin_right = 140.0
margin_bottom = -30.0
theme = ExtResource( 12 )
text = "This is the description of the thing"
align = 1
autowrap = true

[node name="Label" type="Label" parent="2D"]
visible = false
margin_left = 12.0
margin_top = 220.0
margin_right = 81.0
margin_bottom = 234.0
text = "UPGRADES"

[node name="Label2" type="Label" parent="2D"]
visible = false
margin_left = 243.0
margin_top = 221.0
margin_right = 312.0
margin_bottom = 235.0
text = "SUPPLIES"

[node name="Label3" type="Label" parent="2D"]
visible = false
margin_left = 121.0
margin_top = 220.0
margin_right = 202.0
margin_bottom = 234.0
theme = ExtResource( 12 )
text = "SHOPKEEPER"

[node name="MoneyIcon" parent="2D" instance=ExtResource( 11 )]
margin_left = 250.0
margin_top = 8.0
margin_right = -10.0
margin_bottom = -202.0
